02-rollouts/canary/2-istio/api-ro.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: canary-api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-ro
  namespace: api
  labels:
    app: api
    name: api-ro

spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
      name: api-po

  strategy:
    canary:
      maxSurge: 30%
      maxUnavailable: 0
      stableService: api-svc
      canaryService: canary-api-svc
      steps:
      - setCanaryScale:
          weight: 25
      - setWeight: 25
      - pause: {}
      trafficRouting:
        istio:
          virtualService:
            name: api-vs
            routes:
            - api-svc

  template:
    metadata:
      labels:
        app: api
        name: api-po
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
