02-rollouts/canary/2-istio/api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-ro
  namespace: api
  labels:
    app: api
    name: api-ro

spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
      name: api-po

  template:
    metadata:
      labels:
        app: api
        name: api-po
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
