02-rollouts/canary/2-istio/istio-ro.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: api-gw
  namespace: api
spec:
  selector:
    # selets to istio ingress gateway pod
    app: istio-ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - api-192.168.39.155.nip.io
    tls:
      httpsRedirect: false

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: api-vs
  namespace: api
spec:
  gateways:
  - api/api-gw
  hosts:
  - api-192.168.39.155.nip.io
  http:
  - name: api-svc
    route:
    - destination:
        host: api-svc.api.svc.cluster.local
        port:
          number: 3000
      weight: 100
    - destination:
        host: canary-api-svc.api.svc.cluster.local
        port:
          number: 3000
      weight: 0
